# ZP

./: pyproject.toml  s.txt  s2.txt
lab1/: lab1.ipynb  projekt_podstawy_oop_v1.md
lab2/: lab2.ipynb  lab2_numba.ipynb
lab3/: lab3.ipynb
lab4/: lab4_ising_numba.py  lab4_run_ising.py  projekt_refaktoryzacja_ising_argparse_wyjatki.md
projekt/: funkcje_fourier.py  projekt_laboratorium_fourierowskie.py  projekt_mini_laboratorium_fourierowskie.md  readme.md
projekt/signal_sources/: signal.txt  signal2.txt
projekt/tests/: app3.ipynb  tests.py
