[project]
name = "zadania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
    "wordcloud>=1.9.6",
]
